--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "asyncio>=3.4.3",
+    "fastapi>=0.115.12",
     "python-dotenv>=1.1.0",
     "redis>=5.2.1",
+    "uvicorn>=0.34.1",
 ]
