--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "asyncio>=3.4.3",
     "fastapi>=0.115.12",
+    "jinja2>=3.1.6",
     "python-dotenv>=1.1.0",
     "redis>=5.2.1",
     "uvicorn>=0.34.1",
