--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "python-dotenv>=1.1.0",
     "redis>=5.2.1",
+    "structlog>=25.2.0",
     "uvicorn>=0.34.1",
 ]
 
