--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,3 +52,8 @@ quote-style = "double"
 # automatically detect the appropriate line ending.
 line-ending = "auto"
 
+[tool.uv]
+dev-dependencies = [
+    "ipdb>=0.13.13",
+]
+
