--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,17 @@ services:
     volumes:
       - redis-data:/data
 
+  webapp:
+    build:
+      context: .
+      dockerfile: src/app/Dockerfile
+    ports:
+      - "8000:8000"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    depends_on:
+      - redis
+
 volumes:
   redis-data:
