--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,15 @@ services:
     depends_on:
       - redis
 
+  scheduler:
+    build:
+      context: .
+      dockerfile: src/scheduler/Dockerfile
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    depends_on:
+      - redis
+
 volumes:
   redis-data:
