--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "asyncio>=3.4.3",
+    "fakeredis>=2.29.0",
     "fastapi>=0.115.12",
     "jinja2>=3.1.6",
     "python-dotenv>=1.1.0",
@@ -54,6 +55,14 @@ line-ending = "auto"
 
 [tool.uv]
 dev-dependencies = [
+    "faker>=22.5.0",
+    "fakeredis>=2.29.0",
+    "httpx>=0.28.1",
     "ipdb>=0.13.13",
+    "pytest-asyncio>=0.23.5",
+    "pytest-cov>=4.1.0",
+    "pytest-env>=1.1.5",
+    "pytest-mock>=3.12.0",
+    "pytest>=8.0.0",
 ]
 
