--- a/pytest.ini
+++ b/pytest.ini
@@ -1,25 +1,29 @@
 [pytest]
+# Test discovery
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
+# Asyncio configuration
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
+
+# Markers and plugins
 markers =
     asyncio: mark test as an asyncio coroutine
+required_plugins = pytest-env
+addopts = --strict-markers
+
+# Logging
+log_cli = true
+log_level = INFO
+
+# Warnings
 filterwarnings =
     ignore::DeprecationWarning
     ignore::UserWarning
 
-asyncio_default_fixture_loop_scope = function
-addopts = --strict-markers
-# This line ensures the pytest-env plugin is loaded, which is necessary
-# for setting environment variables from pytest.ini early in the test lifecycle.
-required_plugins = pytest-env
-
-log_cli = true
-log_level = INFO
-# The 'env' section uses pytest-env to set environment variables for the test session.
-# Setting TESTING=True ensures that the application uses fakeredis for tests,
-# preventing connections to a real Redis instance.
+# Environment variables for test session
 env =
     TESTING=True
