--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,23 +54,23 @@ services:
     profiles:
       - cluster
 
-  webapp:
-    build:
-      context: .
-      dockerfile: src/app/Dockerfile
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./src:/app/src
-    environment:
-      - REDIS_HOST=${REDIS_HOST:-redis}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-      - REDIS_CLUSTER_MODE=${REDIS_CLUSTER_MODE:-false}
-      - PYTHONUNBUFFERED=1
-    depends_on:
-      - ${REDIS_SERVICE:-redis}
-    networks:
-      - redis-cluster-net
+  # webapp:
+  #   build:
+  #     context: .
+  #     dockerfile: src/app/Dockerfile
+  #   ports:
+  #     - "8000:8000"
+  #   volumes:
+  #     - ./src:/app/src
+  #   environment:
+  #     - REDIS_HOST=${REDIS_HOST:-redis}
+  #     - REDIS_PORT=${REDIS_PORT:-6379}
+  #     - REDIS_CLUSTER_MODE=${REDIS_CLUSTER_MODE:-false}
+  #     - PYTHONUNBUFFERED=1
+  #   depends_on:
+  #     - ${REDIS_SERVICE:-redis}
+  #   networks:
+  #     - redis-cluster-net
 
   scheduler:
     build:
