Add Terraform infrastructure for development environment
This commit introduces a complete Terraform configuration to provision the necessary AWS infrastructure for the development environment. It includes
networking (VPC, subnets, security groups), container orchestration (ECS, ECR), a Redis cluster (ElastiCache), and load balancing (ALB). This allows
for a repeatable and automated way to stand up the entire application stack.feat: Add Terraform infrastructure for development environment

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,11 @@ Thumbs.db
 
 .bruno/
 bruno.json
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+.terraform.lock.hcl
+*.tfvars
+!*.tfvars.example
