--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,20 @@ on:
   push:
     branches:
       - main
+    # Only trigger when these paths change
+    paths:
+      - 'src/**'
+      - 'Dockerfile*'
+      - '**/Dockerfile*'
+      - 'package*.json'
+      - 'requirements*.txt'
+      - 'go.*'
+      - '**/go.*'
+      - '**/*.go'
+      - '**/*.js'
+      - '**/*.py'
+      - '**/*.sh'
+      - '.github/workflows/build.yml'
 
 env:
   AWS_REGION: ap-southeast-1
