--- a/src/controller/Dockerfile
+++ b/src/controller/Dockerfile
@@ -12,8 +12,11 @@ COPY uv.lock .
 # Install dependencies in a separate layer
 RUN uv pip install --system -e .
 
+# Auto-discover and install instrumentations
+RUN uv run opentelemetry-bootstrap -a requirements | uv pip install --requirement -
+
 # Copy the application source code
 COPY ./src /app/src
 
 # Production command
-CMD ["python", "-m", "src.controller.main"]
+CMD ["opentelemetry-instrument", "python", "-m", "src.controller.main"]
