--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "asyncio>=3.4.3",
     "fastapi>=0.115.12",
     "jinja2>=3.1.6",
+    "opentelemetry-distro[otlp]>=0.57b0",
+    "opentelemetry-instrumentation-fastapi>=0.57b0",
+    "opentelemetry-instrumentation>=0.57b0",
     "python-dotenv>=1.1.0",
     "redis>=5.2.1",
     "uvicorn>=0.34.1",
