--- a/src/scheduler/Dockerfile
+++ b/src/scheduler/Dockerfile
@@ -2,8 +2,11 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# Install uv (keeping consistent with your webapp Dockerfile)
+# Install uv
 RUN pip install --no-cache-dir uv
+
+# Init venv
+RUN uv venv
 
 # Copy only dependency files first
 COPY pyproject.toml .
@@ -11,9 +14,17 @@ COPY uv.lock .
 
 # Install dependencies in a separate layer
 RUN uv pip install --system -e .
+RUN uv pip install opentelemetry-instrumentation-logging
 
-# Copy the application source code
+# Install OpenTelemetry core packages
+RUN uv pip install opentelemetry-distro opentelemetry-exporter-otlp
+
+# Auto-discover and install all required instrumentations
+# This automatically finds and installs packages needed for FastAPI, logging, etc.
+RUN uv run opentelemetry-bootstrap -a requirements | uv pip install --requirement -
+
+# Copy application code
 COPY ./src /app/src
 
 # Production command
-CMD ["python", "-m", "src.scheduler.main"]
+CMD ["uv", "run", "opentelemetry-instrument", "python", "-m", "src.scheduler.main"]
