--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,8 @@ on:
 
 env:
   AWS_REGION: ap-southeast-1
+  TF_STATE_BUCKET: redis-pubsub-101
+  TF_STATE_KEY: develop/redis-pubsub-101.tfstate
 
 jobs:
   deploy:
@@ -46,8 +48,8 @@ jobs:
     - name: Terraform Init
       run: |
         terraform -chdir=infra/environments/develop init \
-          -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
-          -backend-config="key=redis-pubsub-101.tfstate" \
+          -backend-config="bucket=${{ env.TF_STATE_BUCKET }}" \
+          -backend-config="key={{ env.TF_STATE_KEY }}" \
           -backend-config="region=${{ env.AWS_REGION }}"
 
     - name: Terraform Apply
