--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 
 services:
   redis:
@@ -20,18 +20,9 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - PYTHONUNBUFFERED=1
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
-      - OTEL_EXPORTER_OTLP_INSECURE="true"
-      - OTEL_LOGS_EXPORTER=console,otlp
-      - OTEL_TRACES_EXPORTER=none
-      - OTEL_METRICS_EXPORTER=none
-      - SERVICE_NAME=redis-pubsub-101-webapp
     depends_on:
       - redis
-      - otel-collector
-    networks:
-      - default
-      - monitoring
+    command: uvicorn src.app.main:app --host 0.0.0.0 --port 8000 --reload --reload-dir /app/src
 
   scheduler:
     build:
@@ -43,17 +34,9 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - PYTHONUNBUFFERED=1
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
-      - OTEL_EXPORTER_OTLP_INSECURE="true"
-      - OTEL_LOGS_EXPORTER=console,otlp
-      - OTEL_TRACES_EXPORTER=none
-      - OTEL_METRICS_EXPORTER=none
-      - SERVICE_NAME=redis-pubsub-101-scheduler
     depends_on:
       - redis
-    networks:
-      - default
-      - monitoring
+    command: watchmedo auto-restart --directory=/app/src --pattern=*.py --recursive -- python -m src.scheduler.main
 
   controller:
     build:
@@ -65,69 +48,9 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - PYTHONUNBUFFERED=1
-      - SERVICE_NAME=redis-pubsub-101-controller
     depends_on:
       - redis
-
-  # Jaeger all-in-one for local development
-  jaeger:
-    image: jaegertracing/all-in-one:1.51
-    ports:
-      - "16686:16686" # Jaeger UI
-      - "14250:14250" # gRPC
-    environment:
-      COLLECTOR_OTLP_ENABLED: true
-      LOG_LEVEL: debug
-    networks:
-      - monitoring
-
-  # OpenTelemetry Collector (Data Pipeline)
-  otel-collector:
-    image: otel/opentelemetry-collector:latest
-    volumes:
-      - ./otel-collector-config.yaml:/etc/otel/config.yaml
-    command:
-      - "--config=/etc/otel/config.yaml"
-    ports:
-      - "4317:4317" #grpc
-      - "4318:4318" #http
-    depends_on:
-      - loki
-    networks:
-      - monitoring
-
-  # LOGS: Loki
-  loki:
-    image: grafana/loki:main
-    ports:
-      - "3100:3100"
-    volumes:
-      - ./loki-config.yaml:/etc/loki/local-config.yaml
-    command: -config.file=/etc/loki/local-config.yaml
-    networks:
-      - monitoring
-
-  grafana:
-    image: grafana/grafana:11.6.0
-    environment:
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_BASIC_ENABLED=false
-      - GF_INSTALL_PLUGINS=grafana-simple-json-datasource
-    ports:
-      - 3000:3000/tcp
-    volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning
-    networks:
-      - monitoring
+    command: watchmedo auto-restart --directory=/app/src --pattern=*.py --recursive -- python -m src.controller.main
 
 volumes:
   redis-data:
-  prometheus_data:
-  grafana_data:
-  loki_data:
-
-networks:
-  default:
-    driver: bridge
-  monitoring:
