--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,9 @@ exclude = [
     "venv",
 ]
 
+# Set max line length for linting/formatting
+line-length = 79
+
 [tool.ruff.format]
 # use double quotes for strings.
 quote-style = "double"
@@ -57,6 +60,7 @@ dev = [
     "fakeredis>=2.29.0",
     "httpx>=0.28.1",
     "ipdb>=0.13.13",
+    "ruff>=0.6.9",
     "pytest-asyncio>=0.23.5",
     "pytest-cov>=4.1.0",
     "pytest-env>=1.1.5",
